# anoma-vp-toolkit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/commands/: build.rs  mod.rs  new.rs  test.rs
templates/default_vp/: Cargo.toml
templates/default_vp/src/: lib.rs
